--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,3 +1,6 @@
+# !!! This package (xorg-libpthread-stubs) has been deprecated in favor of
+# `pthread-stubs` for compatibility with Anaconda `defaults` !!!!
+
 {% set xorg_name = "libpthread-stubs" %}
 {% set xorg_category = "xcb" %}
 {% set name = "xorg-" ~ xorg_name %}
@@ -20,6 +23,7 @@ source:
 # downstream packages.
 
 build:
+  skip: true # !!!!!!!!
   number: 1
   detect_binary_files_with_prefix: true
 
